--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -101,32 +101,41 @@ body {
 // Navbar
 
 .navbar {
-
-    padding-top: 60px;
     position: fixed;
     width: 100%;
     background-color: $background-color;
 
-    .navbar-links {
+    .navbar-container {
+        padding: 60px 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-        display: none;
+            .navbar-links {
 
-        @media (min-width: 768px) {
-            display: flex;
-            gap: 35px;
-            flex-direction: row;
-        }
+                display: none;
 
-        a {
-            text-decoration: none;
-            color: $font-primary-color;
+                @media (min-width: 768px) {
+                    display: flex;
+                    gap: 35px;
+                    flex-direction: row;
+                }
 
-            &:hover {
-                color: $primary-color;
+                a {
+                    text-decoration: none;
+                    color: $font-primary-color;
+
+                    &:hover {
+                        color: $primary-color;
+                    }
+
+                }
             }
 
-        }
     }
+
+
 
 }
 
